force-app/main/default/objects/Lead_Contact_Mapping__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>lead conversion mapping setting. lead fields to contact fields.</description>
    <fields>
        <fullName>Contact_Field__c</fullName>
        <label>Contact Field</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lead_Field__c</fullName>
        <label>Lead Field</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Static_Value__c</fullName>
        <label>Static Value</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <label>Lead Contact Mapping</label>
    <listViews>
        <fullName>All_Mappings</fullName>
        <columns>NAME</columns>
        <columns>Lead_Field__c</columns>
        <columns>Contact_Field__c</columns>
        <columns>Static_Value__c</columns>
        <columns>Is_Required__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Mappings</label>
    </listViews>
</CustomObject>